conformance_test/positive_tests/09_test_configurations/0901_communication_ports/NegSyn_0901_Communication_ports_001.ttcn
/******************************************************************************
 * Copyright (c) 2000-2016 Ericsson Telecom AB
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   Adrien Kirjak – initial implementation
 *
 ** @version  0.0.1
 ** @purpose  1:9.1, Verify that a two TSI port cannot be connected
 ** @verdict  pass reject, noexecution
 ***************************************************/

/*NOTE: see Figure 7(f): Two TSI port cannot be connected
 * */

module NegSyn_0901_Communication_ports_001 {
  
    type port P message {
        inout integer
    }

    type component GeneralComp
    {
        port P p1, p2;
    }
	
        type component General_System_Comp
    {
        port P p_system_1, p_system_2;
    }
    
    testcase TC_NegSyn_0901_Communication_ports_001() runs on GeneralComp system General_System_Comp {
		
        connect(system:p_system_1, system:p_system_2); // error: p_system_1 and p_system_2 cannot be connected
		
        setverdict(pass);
    }
	
    control{
        execute(TC_NegSyn_0901_Communication_ports_001());
    }
}

